Added the forecast html and css

--- a/index.html
+++ b/index.html
@@ -45,21 +45,29 @@
             <div class="weather-app-unit">°C</div>
           </div>
         </div>
-        <div class="weather-forecast" id="forecast"></div>
+        <div class="weather-forecast" id="forecast">
+          <div class="weather-forecast-date">Sat</div>
+          <div class="weather-forecast-icon">🌤️</div>
+          <div class="weather-forecast-temperature">
+            <div class="weather-forecast--temperature-max">
+              <strong>18°</strong>
+            </div>
+            <div class="weather-forecast-temperature-min">9°</div>
+          </div>
+        </div>
       </main>
-
       <footer>
         <p>
           This project was coded by
           <a href="https://github.com/Buhle-Masondo" target="_blank"
             >Buhle Masondo</a
           >
-          and is
+          , is
           <a
             href="https://github.com/Buhle-Masondo/my-weather-project"
             target="_blank"
           >
-            on GitHub</a
+            open-sourced on GitHub</a
           >
           and
           <a href="https://my-weather-smart-app.netlify.app/" target="_blank"
