--- a/index.html
+++ b/index.html
@@ -45,14 +45,16 @@
             <div class="weather-app-unit">°C</div>
           </div>
         </div>
-        <div class="weather-forecast" id="forecast">
-          <div class="weather-forecast-date">Sat</div>
-          <div class="weather-forecast-icon">🌤️</div>
-          <div class="weather-forecast-temperature">
-            <div class="weather-forecast--temperature-max">
-              <strong>18°</strong>
-            </div>
-            <div class="weather-forecast-temperature-min">9°</div>
+        /div>
+        <div class="weather-forecast" id="forecast>
+            <div class="weather-forecast-date">Tue</div>
+            <div class="weather-forecast-icon">🌤️</div>
+            <div class="weather-forecast-temperatures">
+              <div class="weather-forecast-temperature">
+                <strong>15º</strong>
+              </div>
+              <div class="weather-forecast-temperature">9º</div>
+              
           </div>
         </div>
       </main>
