--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div id="icon"></div>
 
             <div class="weather-app-temperature" id="temperature"></div>
-            <div class="weather-app-unit"></div>
+            <div class="weather-app-unit">°C</div>
           </div>
         </div>
         <div class="weather-forecast" id="forecast"></div>
